HW3/javali_tests/others/new/HW3_MarLin/type_error/unary_op/OkArithmeticUnOp.javali
class Main {

   void main() {
      int i;
      i = 1;
      i = +i;
      i = -i;
   }
}
